--- a/css/slideOutShopCart.050115.1.scss
+++ b/css/slideOutShopCart.050115.1.scss
@@ -55,12 +55,27 @@ aside.slideOutShoppingCart {
 		@include transformRotate(-59deg);
 	}
 
-	span.shopCartCount {
+	div.frame {
+		@include marginPaddingReset1;
 		position: absolute;
 		top:0;
-		left: 22%;
+		left:0;
+		right:0;
+		bottom:0;
+		//flexbox
+		//apply flexbox to affect the number in ::before?
+		@include flexboxColumn1;
+		justify-content: center;
+		align-content: center;
+		align-items:center;
+	}
+
+	span.shopCartCount {
+		@include marginPaddingReset1;
+		display: inline-block;
 		color: white;
 		text-shadow:0 0 10px $slideOutCartTextShadow;
+		font-size: $basefontsize*2.2;
 	}
 }
 
