--- a/includes/links.jade
+++ b/includes/links.jade
@@ -3,7 +3,7 @@
 //- ===================================
 
 //- <link type="image/png" href="images/favicon.png" rel="icon">
-link(rel="stylesheet", href="./images/favicon.png")
+link(type="image/png", rel="icon", href="./images/favicon.png")
 
 //- END FAVICONS
 
