Finally figured out the javascript coding for the slider sort of nav menu for Testimonials.
// to make this function work well or at all you need to give your li elements unique IDs that are numbered and can be tied directly to the numbering of the slider nav...
// you use the index() method to return the position of the li that was clicked (i.e. $(this) element clicked) and that helps you acquire the targeting on corresponding ID#

Now that the targeting is done I can use animation to fade in or out and make it more interesting.

--- a/css/footer.042715.1.scss
+++ b/css/footer.042715.1.scss
@@ -424,6 +424,13 @@ section.copyright nav {
 		}
 	}
 }
+
+// photo credits
+div.credits {
+	//flex child
+	flex: 1 100%;
+}
+
 // // END COPYRIGHT ------------------------------------------------
 
 
