--- a/includes/footer.042715.1.jade
+++ b/includes/footer.042715.1.jade
@@ -112,6 +112,15 @@ section.copyright
 			+linkTemplate042115a('About Us',aboutLink)
 			+linkTemplate042115a('Payment',payLink)
 			+linkTemplate042115a('Shipping',shipLink)
+		div.credits
+			p Photo Credits: 
+				a(href="http://www.clubmonaco.com/") Club Monaco
+				| , 
+				a(href="https://us.aritzia.com/") Aritzia
+				| , 
+				a(href="http://www.ca.allsaints.com/") All Saints
+				| , 
+				a(href="https://www.pinterest.com/") Pinterest
 // END COPYRIGHT ------------------------------------------------
 
 
