--- a/includes/links.jade
+++ b/includes/links.jade
@@ -11,5 +11,8 @@ link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/
 link(rel="stylesheet", href="./css/jquery-ui.min.css")
 //- <link href='http://fonts.googleapis.com/css?family=Gudea:400,700,400italic' rel='stylesheet' type='text/css'>
 link(href="http://fonts.googleapis.com/css?family=Gudea:400,700,400italic", rel="stylesheet", type="text/css")
+
+link(href="http://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.min.css", rel="stylesheet", type="text/css")
+
 //- your custom stylesheet should be the very last
 link(href="./css/style.css", rel="stylesheet", type="text/css")
