--- a/includes/scripts.jade
+++ b/includes/scripts.jade
@@ -3,7 +3,9 @@ script(type='text/javascript', src='https://code.jquery.com/jquery-2.1.3.min.js'
 //- script(type='text/javascript', src='./js/flat-ui.min.js')
 script(type='text/javascript', src='./js/jquery.sticky.js')
 script(type='text/javascript', src='./js/jquery-ui.min.js')
-	
+
+script(type='text/javascript', src='http://cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.pkgd.min.js')
+
 script(type='text/javascript', src='./js/jquery.gsap.min.js')
 script(type='text/javascript', src='./js/TweenMax.min.js')
 script(type='text/javascript', src='./js/Draggable.min.js')
